--- a/package.json
+++ b/package.json
@@ -7,17 +7,27 @@
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
+        "aws-sdk": "^2.670.0",
+        "axios": "^0.19.2",
+        "cors": "^2.8.5",
         "express": "^4.17.1",
-        "node-sass": "^4.14.0",
+        "node-addon-api": "^3.0.0",
+        "node-pre-gyp": "^0.14.0",
+        "node-sass": "^4.14.1",
+        "nodemon": "^2.0.3",
+        "pg-hstore": "^2.3.3",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-paginate": "^6.3.2",
         "react-router-dom": "^5.1.2",
         "react-scripts": "3.4.1",
+        "request": "^2.79.0",
         "sequelize": "^5.21.7",
         "sqlite3": "^4.2.0"
     },
     "scripts": {
         "start": "react-scripts start",
+        "start_server": "nodemon src/server/server.js",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
