--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "node-sass": "^4.14.1",
         "nodemon": "^2.0.3",
         "pg-hstore": "^2.3.3",
+        "query-string": "^6.12.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-paginate": "^6.3.2",
