--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,8 @@
         "react-scripts": "3.4.1",
         "request": "^2.79.0",
         "sequelize": "^5.21.7",
-        "sqlite3": "^4.2.0"
+        "sqlite3": "^4.2.0",
+        "victory": "^34.2.0"
     },
     "scripts": {
         "start": "react-scripts start",
